--- a/doc/docker-compose.yml
+++ b/doc/docker-compose.yml
@@ -15,6 +15,9 @@ services:
   redis:
     image: redis:latest
     container_name: redis
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+      - REDIS_DATABASE=1
     ports:
       - "6379:6379"
     volumes:
