feat："添加jd-HotKey处理方案，对题库热点数据进行三级缓存"

--- a/doc/docker-compose.yml
+++ b/doc/docker-compose.yml
@@ -45,7 +45,19 @@ services:
     depends_on:
       - elasticsearch
 
+  etcd:
+    image: bitnami/etcd:3.5.15
+    container_name: etcd
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+    ports:
+      - "2379:2379"
+      - "2380:2380"
+    volumes:
+      - etcd-data:/etcd-data
+
 volumes:
   mysql-data:
   redis-data:
   es-data:
+  etcd-data:
