--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -168,3 +168,11 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.cool.pandora.controller
+
+# 热 key 探测
+hotkey:
+  app-name: pandora
+  caffeine-size: 10000
+  push-period: 1000
+  etcd-server: http://localhost:2379
+
