--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
             <systemPath>${project.basedir}/lib/hotkey-client-0.0.4-SNAPSHOT.jar</systemPath>
         </dependency>
 
+        <!-- nacos -->
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+            <version>0.2.12</version>
+        </dependency>
+
+
         <!-- sentinel -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
