feat："引入Sa-Token,添加同端登录检测"

--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,11 @@
         </dependency>
 
         <!-- Sa-Token 整合 Redis （使用 jdk 默认序列化方式） -->
-        <dependency>
-            <groupId>cn.dev33</groupId>
-            <artifactId>sa-token-redis</artifactId>
-            <version>1.39.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cn.dev33</groupId>-->
+<!--            <artifactId>sa-token-redis</artifactId>-->
+<!--            <version>1.39.0</version>-->
+<!--        </dependency>-->
 
         <!-- Sa-Token 整合 Redis （使用 jackson 序列化方式） -->
         <dependency>
